--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h3 class="font-semibold text-lg mb-2">Responsive Web CV</h3>
         <p class="text-sm mb-3">Create an online CV with Tailwind CSS.</p>
         <a href="#" class="text-blue-600 hover:underline text-sm">Demo</a> |
-        <a href="#" class="text-blue-600 hover:underline text-sm">GitHub</a>
+        <a href="https://github.com/yohan-sketch/Web_CV_Febryan-Yohan-Saputra_24-July/edit/main/index.html" class="text-blue-600 hover:underline text-sm">GitHub</a>
       </div>
     </div>
   </section>
