--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <section id="contact" class="py-16 px-6 max-w-4xl mx-auto text-center">
     <h2 class="text-2xl font-bold mb-6">Contact</h2>
     <div class="flex justify-center gap-6 text-blue-600 text-2xl">
-      <a href="mailto:email@example.com" aria-label="Email">📧</a>
-      <a href="https://github.com/username" target="_blank" aria-label="GitHub">🐙</a>
+      <a href="mailto:bryanyohan02@gmail.com" aria-label="Email">📧</a>
+      <a href="https://github.com/yohan-sketch/Web_CV_Febryan-Yohan-Saputra_24-July.git" target="_blank" aria-label="GitHub">🐙</a>
       <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">🔗</a>
     </div>
   </section>
