--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="flex justify-center gap-6 text-blue-600 text-2xl">
       <a href="mailto:bryanyohan02@gmail.com" aria-label="Email">📧</a>
       <a href="https://github.com/yohan-sketch/Web_CV_Febryan-Yohan-Saputra_24-July.git" target="_blank" aria-label="GitHub">🐙</a>
-      <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">🔗</a>
+      <a href="https://wa.me/6281234567890" target="_blank" aria-label="WhatsApp">💬</a>
     </div>
   </section>
 
