--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h2 class="text-2xl font-bold mb-6">Contact</h2>
     <div class="flex justify-center gap-6 text-blue-600 text-2xl">
       <a href="mailto:bryanyohan02@gmail.com" aria-label="Email">📧</a>
-      <a href="https://github.com/yohan-sketch/Web_CV_Febryan-Yohan-Saputra_24-July.git" target="_blank" aria-label="GitHub">🐙</a>
+      <a href="https://github.com/yohan-sketch" target="_blank" aria-label="GitHub">🐙</a>
       <a href="https://wa.me/628988708120" target="_blank" aria-label="WhatsApp">💬</a>
     </div>
   </section>
